<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second"
    tools:context=".Fragment.Home">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icon"
                    app:tint="@color/first" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textColor="@color/first"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/search"
                    app:tint="@color/third" />

            </LinearLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/sliderPager"
                android:layout_width="match_parent"
                android:layout_height="210dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category"
                    android:textColor="@color/third"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_arrow_right_alt_24"
                    android:drawableTint="@color/first"
                    android:gravity="center_vertical"
                    android:text="@string/see_all"
                    android:textColor="@color/first"
                    android:textSize="13sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popular"
                    android:textColor="@color/third"
                    android:textSize="@dimen/title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/see_all2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_arrow_right_alt_24"
                    android:drawableTint="@color/first"
                    android:gravity="center_vertical"
                    android:text="@string/see_all"
                    android:textColor="@color/first"
                    android:textSize="13sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:overScrollMode="never" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:layout_centerInParent="true"
        layout="@layout/error_page"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

</RelativeLayout>