<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.UpdateNumber">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/fourth"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    />

                <LinearLayout
                    android:layout_marginTop="6dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="@color/white"
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+993"
                        android:textSize="16sp"
                        android:textColor="@color/fourth"
                        android:layout_marginLeft="16dp"
                        />
                    <EditText
                        android:textColor="@color/third"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:background="@android:color/transparent"
                        android:padding="12dp"
                        android:layout_marginLeft="6dp"
                        android:inputType="phone"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/send_code"
                android:textAlignment="center"
                android:textColor="@color/first"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/fourth"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kod"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/third"
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:padding="12dp"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/white"
                        />

                    <EditText
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/third"
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:padding="12dp"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/white"
                        />

                    <EditText
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/third"
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:padding="12dp"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/white"
                        />

                    <EditText
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/third"
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:padding="12dp"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/white"
                        />

                    <EditText
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/third"
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:padding="12dp"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/white"
                        />

                    <EditText
                        android:layout_marginLeft="6dp"
                        android:layout_weight="1"
                        android:layout_marginTop="6dp"
                        android:textColor="@color/third"
                        android:layout_width="0dp"
                        android:textSize="16sp"
                        android:padding="12dp"
                        android:textAlignment="center"
                        android:maxLength="1"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:backgroundTint="@color/white"
                        />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/third"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_update"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/first"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>